[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Icons/ModernLandscapeLab/settings.svg" type="Texture" id=1]
[ext_resource path="res://UI/Settings/Settings.gd" type="Script" id=4]
[ext_resource path="res://UI/Settings/OptionButton.gd" type="Script" id=5]
[ext_resource path="res://UI/CustomElements/SignalTextToggle.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Tracking/Record.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/CustomElements/AutoTextureButton.shader" type="Shader" id=8]
[ext_resource path="res://UI/CustomElements/AutoTextureButton.tscn" type="PackedScene" id=9]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/color = Vector3( 0, 0, 0 )
shader_param/rotation_radians = null
shader_param/color_length_modulate_threshold = 1.5

[node name="Settings" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowSettingsButton" parent="." instance=ExtResource( 9 )]
material = SubResource( 1 )
margin_right = 30.0
margin_bottom = 30.0
texture_normal = ExtResource( 1 )
texture_name = "settings"

[node name="SettingsWindow" type="WindowDialog" parent="."]
margin_left = -33.0
margin_top = 14.0
margin_right = 63.0
margin_bottom = 15.0
mouse_filter = 1
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 13.0
margin_right = -9.0
margin_bottom = -14.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsWindow/ScrollContainer"]
margin_right = 405.0
margin_bottom = 271.0

[node name="Language" type="HBoxContainer" parent="SettingsWindow/ScrollContainer/VBoxContainer"]
margin_right = 405.0
margin_bottom = 37.0

[node name="Label" type="Label" parent="SettingsWindow/ScrollContainer/VBoxContainer/Language"]
margin_top = 6.0
margin_right = 105.0
margin_bottom = 31.0
text = "Language"

[node name="Languages" type="OptionButton" parent="SettingsWindow/ScrollContainer/VBoxContainer/Language"]
margin_left = 113.0
margin_right = 171.0
margin_bottom = 37.0
script = ExtResource( 5 )

[node name="LabTable" type="HBoxContainer" parent="SettingsWindow/ScrollContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 405.0
margin_bottom = 125.0

[node name="Label" type="Label" parent="SettingsWindow/ScrollContainer/VBoxContainer/LabTable"]
margin_top = 27.0
margin_right = 245.0
margin_bottom = 52.0
text = "Enable LabTable Mode"

[node name="EnableLabTable" type="CheckButton" parent="SettingsWindow/ScrollContainer/VBoxContainer/LabTable"]
margin_left = 253.0
margin_right = 405.0
margin_bottom = 80.0
pressed = true

[node name="Debug" parent="SettingsWindow/ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 133.0
margin_right = 405.0
margin_bottom = 213.0
label_text = "Show Debug Settings"
signal_to_emit = "toggle_debug"
optional_signal_parameter = 0
default_toggled = false

[node name="Record" parent="SettingsWindow/ScrollContainer/VBoxContainer" instance=ExtResource( 7 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 221.0
margin_right = 405.0
margin_bottom = 271.0
